añadimos carperas vacias

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,5 @@
-img/*
-mask/*
-datasets/*
-test/*
-train/*
-rescale_mask/*
 *.DS_Store
 *__pycache__/
-modelos/*
-git reset *.pth
-git reset *.tif
+*.pth
+*.tif
+*.png
